Closed
Bug 927944
Opened 11 years ago
Closed 11 years ago
Annotate crash reports with a list of DLLs that were blocked (windows)
Categories
(Toolkit :: Crash Reporting, defect)
Tracking
()
RESOLVED
FIXED
mozilla27
People
(Reporter: benjamin, Assigned: benjamin)
References
Details
Attachments
(1 file)
11.19 KB,
patch
|
ehsan.akhgari
:
review+
|
Details | Diff | Splinter Review |
I'm somewhat worried that blocking some DLL loads may cause new crashes, for example the block in bug 812683. In order to gain confidence about deploying these kinds of blocks, I'd like to add an annotation which lists the DLLs that were blocked when a crash occurs.
Assignee | ||
Comment 1•11 years ago
|
||
Attachment #819042 -
Flags: review?(ehsan)
Comment 2•11 years ago
|
||
Comment on attachment 819042 [details] [diff] [review]
bug927944-annotated-blocked
Review of attachment 819042 [details] [diff] [review]:
-----------------------------------------------------------------
::: toolkit/xre/nsWindowsDllBlocklist.cpp
@@ +22,5 @@
> #include "nsWindowsHelpers.h"
>
> using namespace mozilla;
>
> +#ifdef MOZ_CRASHREPORTER
Why did you remove this? This will probably break SeaMonkey... <http://mxr.mozilla.org/comm-central/source/suite/app/Makefile.in#18>
@@ +283,4 @@
> std::map<DWORD, const char*>* ReentrancySentinel::sThreadMap;
>
> +/**
> + * This is a linked list of DLLs that have been blocked.
Please document why you're not using mozilla::LinkedList here (I agree that is the right choice!)
@@ +313,5 @@
> +
> +void
> +DllBlockSet::Add(const char* name, unsigned long long version)
> +{
> + EnterCriticalSection(&sLock);
Any chance you could please move <http://mxr.mozilla.org/mozilla-central/source/xpcom/ds/TimeStamp_windows.cpp#192> to nsWindowsHelpers and use it here? Implementing RAII manually is error prone.
@@ +332,5 @@
> +DllBlockSet::Write(HANDLE file)
> +{
> + EnterCriticalSection(&sLock);
> + DWORD nBytes;
> + __try {
Please document why you're using __try/__except here.
Attachment #819042 -
Flags: review?(ehsan) → review+
Assignee | ||
Comment 3•11 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/d04bbdfff591
https://hg.mozilla.org/mozilla-central/rev/e3d6e17ad7a3
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•