Bug 927944 part B - move AutoCriticalSection to nsWindowsHelpers.h and use it instead of manual lock handling in nsWindowsDllBlocklist.cpp, r=ehsan